[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Sprites/BuzzClinger/Buzzclinger.png" type="Texture" id=1]
[ext_resource path="res://src/actors/BuzzClinger.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 20 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Rotate"
length = 0.3
loop = true
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="BuzzClinger" type="Area2D"]
collision_layer = 1028
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 3

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="UpCheck" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="UpCheck"]
position = Vector2( 0, -22 )
shape = SubResource( 2 )

[node name="DownCheck" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DownCheck"]
position = Vector2( 0, 22 )
shape = SubResource( 2 )

[node name="LeftCheck" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="LeftCheck"]
position = Vector2( -22, 0 )
shape = SubResource( 3 )

[node name="RighttCheck" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="RighttCheck"]
position = Vector2( 22, 0 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Rotate = SubResource( 5 )
